--- a/ankiweb_page.html
+++ b/ankiweb_page.html
@@ -23,3 +23,6 @@ Download this deck for a demo of the add-on: https://drive.google.com/file/d/1Er
 
 <b>Storage</b>
 In the first review of a card that has the InContext filter, sentences will be fetched from the language providers and saved in the <code>user_files/sentences.db</code> file. Subsequent reviews will use those saved sentences (if any) and avoid making more requests to the providers. You can anyway update saved sentences manually from the GUI.
+
+<b>Changelog</b>
+See <a href="https://github.com/abdnh/anki-incontext/blob/master/CHANGELOG.md">CHANGELOG.md</a> for a list of changes.
