Add credit section

--- a/ankiweb_page.html
+++ b/ankiweb_page.html
@@ -27,6 +27,9 @@ In the first review of a card that has the InContext filter, sentences will be f
 <b>Changelog</b>
 See <a href="https://github.com/abdnh/anki-incontext/blob/master/CHANGELOG.md">CHANGELOG.md</a> for a list of changes.
 
+<b>Credit</b>
+Some icons are adapted from <a href="https://icons.getbootstrap.com/">Bootstrap Icons</a>; licensed under the MIT.
+
 <b>Support & feature requests</b>
 Please post any questions, bug reports, or feature requests in the <a href="https://forums.ankiweb.net/t/incontext-learn-vocabulary-in-context-with-random-sentences/24017">support page</a> or the <a href="https://github.com/abdnh/anki-incontext/issues">issue tracker</a>.
 If you want priority support for your feature/help request, I'm available for hire. You can get in touch from the aforementioned pages, via <a href="mailto:abdo@abdnh.net">email</a> or on <a href="https://www.fiverr.com/abd_nh">Fiverr</a>.
