--- a/ankiweb_page.html
+++ b/ankiweb_page.html
@@ -24,6 +24,10 @@ Download this deck for a demo of the add-on: https://drive.google.com/file/d/1Er
 <b>Storage</b>
 In the first review of a card that has the InContext filter, sentences will be fetched from the language providers and saved in the <code>user_files/sentences.db</code> file. Subsequent reviews will use those saved sentences (if any) and avoid making more requests to the providers. You can anyway update saved sentences manually from the GUI.
 
+<b>Known Issues</b>
+<ul><li><b>IMPORTANT</b>: In versions before 0.3.1, the add-on suffered from an <a href="https://github.com/ankitects/anki/pull/2518">issue</a> preventing updates from being properly installed, which resulted in Anki prompting to update the add-on every time. To fix this, please follow the steps carefully:<ol><li>Download version 0.3.1 from <a href="https://github.com/abdnh/anki-incontext/releases/tag/0.3.1">this page</a>. You should download the <code>incontext_ankiweb.ankiaddon</code> file or this won't work.</li><li>Close Anki then double click on the .ankiaddon file to install it and run Anki. Closing Anki is important for the update to work.</li><li>Go to <i>Tools &gt; Add-ons</i> and click <i>Check for Updates</i>. You should be prompted to update the add-on. The issue should be fixed after updating this time.</li></ol>
+</li></ul>
+
 <b>Changelog</b>
 See <a href="https://github.com/abdnh/anki-incontext/blob/master/CHANGELOG.md">CHANGELOG.md</a> for a list of changes.
 
