Add an option to download and import Tatoeba databases

--- a/ankiweb_page.html
+++ b/ankiweb_page.html
@@ -23,7 +23,7 @@ You can also add sentences to a chosen field in multiple notes using the browser
 <img src="https://raw.githubusercontent.com/abdnh/anki-incontext/master/images/fill.png" alt="Fill-in dialog">
 
 <b>Importing Tatoeba databases</b>
-To make <a href="https://tatoeba.org">Tatoeba</a> databases available for use with the add-on, please see <a href="https://github.com/abdnh/anki-incontext/blob/master/src/user_files/tatoeba/README.txt">this doc</a>.
+<p>Use <i>Tools &gt; InContext &gt; Download Tatoeba sentences</i> to download sentences for your target language from <a href="https://tatoeba.org/">Tatoeba</a>.</p>
 
 <b>Interface</b>
 The add-on has an experimental graphical interface to manage sentences that can be accessed from <b>Tools &gt; InContext</b>.
