--- a/ankiweb_page.html
+++ b/ankiweb_page.html
@@ -1,5 +1,4 @@
-This add-on fetches and displays example sentences in different languages from various sources.
-
+<p>This add-on that fetches and displays example sentences in different languages from various sources.</p>
 
 <b>Fill-in option</b>
 
@@ -14,12 +13,12 @@ This add-on fetches and displays example sentences in different languages from v
 </code>
 <p>Here, the add-on will show a random English example sentence containing the word in the <code>Front</code> field.</p>
 <p>You can specify the language using the <code>lang</code> option:</p>
-<code>{{incontext lang=en:Front}}
+<code>{{incontext lang=eng:Front}}
 </code>
 <p>All <a href="https://en.wikipedia.org/wiki/List_of_ISO_639_language_codes">language codes</a> supported by <a href="https://tatoeba.org/en/downloads">Tatoeba</a> should work.</p>
 <p>Sentences are fetched from multiple sources such as <a href="https://www.dictionary.com/">Dictionary.com</a> (for English) and <a href="https://sozluk.gov.tr">sozluk.gov.tr</a> (for Turkish).
 You can show sentences from only a certain source by using the <code>provider</code> option, like this:</p>
-<code>{{incontext lang=en provider=dictionary.com:Front}}
+<code>{{incontext lang=eng provider=dictionary.com:Front}}
 </code>
 <p>For a list of supported sources, see the <a href="https://github.com/abdnh/anki-incontext/blob/master/src/providers">providers</a> folder.
 The identifier of each provider is defined by a <code>name</code> variable inside each provider class.
@@ -35,18 +34,25 @@ If both language and provider are not given, the default is English with all pro
 <b>Browsing sentences</b>
 
 <p>You can search for sentences using the screen under <i>Tools &gt; InContext &gt; Browse sentences</i>.</p>
+<p><img src="https://raw.githubusercontent.com/abdnh/anki-incontext/master/images/browse.png" alt="Browse screen"></p>
+<p>You can also assign shortcuts to open the browse page for the selected word in the review screen from <i>Tools &gt; InContext &gt; Settings</i>.</p>
+<p><img src="https://raw.githubusercontent.com/abdnh/anki-incontext/master/images/settings.png" alt="Settings screen"></p>
 
 <b>Demo</b>
 
-Download this deck for a demo of the add-on: https://drive.google.com/file/d/1Era5ksSa59xjB3ZbVQsdoTbQEigzh6Bi/view?usp=sharing
+<p>Download this deck for a demo of the add-on: <a href="https://drive.google.com/file/d/1Era5ksSa59xjB3ZbVQsdoTbQEigzh6Bi/view?usp=sharing">https://drive.google.com/file/d/1Era5ksSa59xjB3ZbVQsdoTbQEigzh6Bi/view?usp=sharing</a></p>
+
+<b>Download</b>
+
+<p>You can download the add-on from its page on AnkiWeb: <a href="https://ankiweb.net/shared/info/385420176">https://ankiweb.net/shared/info/385420176</a></p>
 
 <b>Changelog</b>
 
-See <a href="https://github.com/abdnh/anki-incontext/blob/master/CHANGELOG.md">CHANGELOG.md</a> for a list of changes.
+<p>See <a href="https://github.com/abdnh/anki-incontext/blob/master/CHANGELOG.md">CHANGELOG.md</a> for a list of changes.</p>
 
 <b>Credit</b>
 
-Some icons are adapted from <a href="https://icons.getbootstrap.com/">Bootstrap Icons</a>; licensed under the MIT.
+<p>Some icons are adapted from <a href="https://icons.getbootstrap.com/">Bootstrap Icons</a>; licensed under the MIT.</p>
 
 <b>Support &amp; feature requests</b>
 
@@ -61,4 +67,4 @@ Get in touch via <a href="mailto:abdo@abdnh.net">email</a> or the UpWork link be
 <a href="https://www.patreon.com/abdnh"><img height="36" src="https://i.imgur.com/mZBGpZ1.png"></a>
 <a href="https://www.buymeacoffee.com/abdnh" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-blue.png" alt="Buy Me A Coffee" height="36"></a></p>
 <p>I'm also available for freelance add-on development:</p>
-<p><a href="https://www.upwork.com/freelancers/~01d764ac58a0eccc5c"><img height="36" src="https://i.imgur.com/z9lPvHb.png"></a>
+<p><a href="https://www.upwork.com/freelancers/~01d764ac58a0eccc5c"><img height="36" src="https://i.imgur.com/z9lPvHb.png"></a></p>
