--- a/ankiweb_page.html
+++ b/ankiweb_page.html
@@ -15,14 +15,11 @@
 <p>You can specify the language using the <code>lang</code> option:</p>
 <code>{{incontext lang=eng:Front}}
 </code>
-<p>All <a href="https://en.wikipedia.org/wiki/List_of_ISO_639_language_codes">language codes</a> supported by <a href="https://tatoeba.org/en/downloads">Tatoeba</a> should work.</p>
 <p>Sentences are fetched from multiple sources such as <a href="https://www.dictionary.com/">Dictionary.com</a> (for English) and <a href="https://sozluk.gov.tr">sozluk.gov.tr</a> (for Turkish).
 You can show sentences from only a certain source by using the <code>provider</code> option, like this:</p>
 <code>{{incontext lang=eng provider=dictionary.com:Front}}
 </code>
-<p>For a list of supported sources, see the <a href="https://github.com/abdnh/anki-incontext/blob/master/src/providers">providers</a> folder.
-The identifier of each provider is defined by a <code>name</code> variable inside each provider class.
-A list of available providers is also shown in the <a href="https://github.com/abdnh/anki-incontext/blob/master/#interface">interface</a>.</p>
+<p>Go to <i>Tools &gt; InContext &gt; Help</i> for a complete list of supported languages and providers with their template filter codes.</p>
 <p>If a provider is given but no language, the first supported language of the provider will be assumed.
 If both language and provider are not given, the default is English with all providers.</p>
 <p>More sites and languages will be added in the future. Contributions are welcome!</p>
