--- a/ankiweb_page.html
+++ b/ankiweb_page.html
@@ -1,47 +1,8 @@
 <p>This add-on that fetches and displays example sentences in different languages from various sources.</p>
 
-<b>Fill-in option</b>
+<b>Usage</b>
 
-<p>You can add sentences to a chosen field in multiple notes using the browser's <i>Notes &gt; InContext: Add sentences</i> menu item.</p>
-<p><img src="https://raw.githubusercontent.com/abdnh/anki-incontext/master/images/fill.png" alt="Fill-in dialog"></p>
-
-<b>Template filter</b>
-
-<p>The add-on also supports displaying random example sentences for vocabulary each time a card is viewed.</p>
-<p>You just have to put a filter like this in your <a href="https://docs.ankiweb.net/templates/intro.html">card template</a>:</p>
-<code>{{incontext:Front}}
-</code>
-<p>Here, the add-on will show a random English example sentence containing the word in the <code>Front</code> field.</p>
-<p>You can specify the language using the <code>lang</code> option:</p>
-<code>{{incontext lang=eng:Front}}
-</code>
-<p>Sentences are fetched from multiple sources such as <a href="https://www.dictionary.com/">Dictionary.com</a> (for English) and <a href="https://sozluk.gov.tr">sozluk.gov.tr</a> (for Turkish).
-You can show sentences from only a certain source by using the <code>provider</code> option, like this:</p>
-<code>{{incontext lang=eng provider=dictionary.com:Front}}
-</code>
-<p>Go to <i>Tools &gt; InContext &gt; Help</i> for a complete list of supported languages and providers with their template filter codes.</p>
-<p>If a provider is given but no language, the first supported language of the provider will be assumed.
-If both language and provider are not given, the default is English with all providers.</p>
-<p>More sites and languages will be added in the future. Contributions are welcome!</p>
-
-<b>Importing Tatoeba databases</b>
-
-<p>Use <i>Tools &gt; InContext &gt; Download Tatoeba sentences</i> to download sentences for your target language from <a href="https://tatoeba.org/">Tatoeba</a>.</p>
-
-<b>Browsing sentences</b>
-
-<p>You can search for sentences using the screen under <i>Tools &gt; InContext &gt; Browse sentences</i>.</p>
-<p><img src="https://raw.githubusercontent.com/abdnh/anki-incontext/master/images/browse.png" alt="Browse screen"></p>
-<p>You can also assign shortcuts to open the browse page for the selected word in the review screen from <i>Tools &gt; InContext &gt; Settings</i>.</p>
-<p><img src="https://raw.githubusercontent.com/abdnh/anki-incontext/master/images/settings.png" alt="Settings screen"></p>
-
-<b>Demo</b>
-
-<p>Download this deck for a demo of the add-on: <a href="https://drive.google.com/file/d/1Era5ksSa59xjB3ZbVQsdoTbQEigzh6Bi/view?usp=sharing">https://drive.google.com/file/d/1Era5ksSa59xjB3ZbVQsdoTbQEigzh6Bi/view?usp=sharing</a></p>
-
-<b>Download</b>
-
-<p>You can download the add-on from its page on AnkiWeb: <a href="https://ankiweb.net/shared/info/385420176">https://ankiweb.net/shared/info/385420176</a></p>
+<p>See the <a href="https://www.abdnh.net/anki-incontext/">docs</a> for usage.</p>
 
 <b>Changelog</b>
 
