Update from template

--- a/ankiweb_page.html
+++ b/ankiweb_page.html
@@ -14,9 +14,8 @@
 
 <b>Support &amp; feature requests</b>
 
-<p>Please post any questions, bug reports, or feature requests in the <a href="https://forums.ankiweb.net/t/incontext-learn-vocabulary-in-context-with-random-sentences/24017">support page</a> or the <a href="https://github.com/abdnh/anki-incontext/issues">issue tracker</a>.</p>
-<p>If you want priority support for your feature/help request, I'm available for hire.
-Get in touch via <a href="mailto:abdo@abdnh.net">email</a> or the UpWork link below.</p>
+<p>Please post any questions, bug reports, or feature requests in the <a href="https://forums.ankiweb.net/t/incontext-learn-vocabulary-in-context-with-random-sentences/24017">support page</a> or the <a href="https://github.com/abdnh/anki-incontext/issues">issue tracker</a>.</p><p>If you want priority support for your feature/help request, I'm available for hire.
+Get in touch via <a href="mailto:abdo@abdnh.com">email</a> or the Upwork link below.</p>
 
 <b>Support me</b>
 
